--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -60,7 +60,7 @@ a:hover {
 }
 
 ul li {
-  margin-left: 30px;
+  list-style: none;
 }
 
 img {
@@ -86,6 +86,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   line-height: 1.5;
+}
+body._lock {
+  overflow: hidden;
 }
 
 .wrapper {
@@ -152,8 +155,110 @@ body {
   width: 100%;
   top: 0;
   left: 0;
-  padding: 20px;
+  padding: 20px 0;
   z-index: 100;
+}
+.header__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 40px;
+}
+.header__container::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #fff;
+}
+.header__logo {
+  font-weight: 700;
+  font-size: 30px;
+  color: purple;
+  position: relative;
+  z-index: 2;
+}
+
+.menu {
+  position: relative;
+  z-index: 2;
+}
+@media (max-width: 991.98px) {
+  .menu {
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    height: 100%;
+    background: #fafafa;
+    min-width: 300px;
+    z-index: -1;
+    overflow: auto;
+    padding: 130px 15px 40px;
+  }
+  .menu._active {
+    left: 0;
+  }
+}
+@media (max-width: 767.98px) {
+  .menu {
+    width: 100%;
+  }
+}
+@media (min-width: 991.98px) {
+  .menu__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 15px;
+    padding: 0;
+  }
+}
+.menu__item {
+  list-style: none;
+  margin: 0;
+}
+.menu__link {
+  color: #444;
+  position: relative;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+.menu__link::after {
+  content: "";
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  top: 100%;
+  left: 0;
+  background: purple;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+@media (max-width: 991.98px) {
+  .menu__link {
+    font-size: 30px;
+  }
+}
+@media (any-hover: hover) {
+  .menu__link:hover {
+    color: purple;
+  }
+}
+@media (min-width: 991.98px) {
+  .menu__link._active::after {
+    content: "";
+    width: 100%;
+  }
 }
 
 .burger {
@@ -170,21 +275,23 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  z-index: 100;
   position: relative;
+  z-index: 2;
   background: none;
   cursor: pointer;
 }
+@media (min-width: 991.98px) {
+  .burger {
+    display: none;
+  }
+}
 .burger__line {
-  background: #ccc;
+  background: #444;
   height: 2px;
   width: 100%;
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   position: relative;
-}
-.burger:hover .burger__line {
-  background: #444;
 }
 .burger._active .burger__line-1 {
   -webkit-transform: rotate(45deg);
@@ -204,8 +311,8 @@ body {
   bottom: 5px;
 }
 
-.page__container {
-  padding-top: 50px;
+.page {
+  padding-top: 100px;
 }
 .page__main-title {
   font-size: 30px;
@@ -229,36 +336,69 @@ body {
   left: 0;
 }
 
-.menu {
-  position: fixed;
-  top: 0;
-  left: -100%;
-  min-height: 100%;
-  background: #fafafa;
-  min-width: 300px;
-  z-index: 50;
-  -webkit-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
-}
-.menu._active {
-  left: 0;
-}
-.menu__list {
-  padding: 50px 20px;
-}
-.menu__item {
-  list-style: none;
-}
-.menu__link {
-  color: #444;
-}
-
 .section__title {
   font-weight: 700;
   color: purple;
 }
 
 .footer {
+  font-size: 13px;
+  color: #787878;
+  border-top: 1px solid #eee;
+  margin-top: 60px;
+  padding: 40px 0;
   text-align: center;
-  padding: 20px;
+}
+.footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+}
+@media (max-width: 767.98px) {
+  .footer__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    gap: 15px;
+  }
+}
+.footer__copy {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+}
+
+.menu-footer__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 15px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.menu-footer__link {
+  color: #787878;
+}
+@media (any-hover: hover) {
+  .menu-footer__link:hover {
+    text-decoration: underline;
+  }
+}
+.menu-footer__link img {
+  max-width: 28px;
+  max-height: 28px;
 }
