--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -420,6 +420,13 @@ body._lock {
   left: 0;
 }
 
+.section__title {
+  font-size: 25px;
+}
+.section__subsection-title {
+  font-size: 22px;
+  color: #6740d4;
+}
 .section__table {
   overflow: auto;
   padding-bottom: 10px;
