--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -155,9 +155,9 @@ body._lock {
   width: 100%;
   top: 0;
   left: 0;
-  padding: 10px 0;
+  padding: 18px 0;
   z-index: 100;
-  border-bottom: 1px solid #444444;
+  border-bottom: 1px solid #000000;
 }
 .header__container {
   display: -webkit-box;
@@ -178,12 +178,12 @@ body._lock {
   height: 100%;
   top: 0;
   left: 0;
-  background: #f5f5f5;
+  background: #000000;
 }
 .header__logo {
   font-weight: 700;
   font-size: 30px;
-  color: #444444;
+  color: #ffffff;
   position: relative;
   z-index: 2;
 }
@@ -265,7 +265,7 @@ body._lock {
   opacity: 1;
 }
 .menu__link {
-  color: #444;
+  color: #ffffff;
   position: relative;
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
@@ -292,7 +292,7 @@ body._lock {
 }
 @media (any-hover: hover) {
   .menu__link:hover {
-    color: #6740d4;
+    color: #ffffff;
   }
 }
 @media (min-width: 991.98px) {
@@ -311,7 +311,7 @@ body._lock {
     left: -20px;
     background: #f2f0f0;
     min-width: 150px;
-    border: 1px solid #6740d4;
+    border: 1px solid #000000;
     padding-top: 15px;
     -webkit-transform: translate3d(0px, 20px, 0px);
             transform: translate3d(0px, 20px, 0px);
@@ -330,7 +330,7 @@ body._lock {
   transition: color 0.3s ease 0s;
 }
 .menu__submenu-link:hover {
-  color: #6740d4;
+  color: #000000;
 }
 @media (max-width: 991.98px) {
   .menu__submenu-link {
