--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -157,7 +157,7 @@ body._lock {
   left: 0;
   padding: 18px 0;
   z-index: 100;
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid #f5f5f5;
 }
 .header__container {
   display: -webkit-box;
@@ -178,12 +178,12 @@ body._lock {
   height: 100%;
   top: 0;
   left: 0;
-  background: #000000;
+  background: #ffffff;
 }
 .header__logo {
   font-weight: 700;
   font-size: 30px;
-  color: #ffffff;
+  color: #000000;
   position: relative;
   z-index: 2;
 }
@@ -265,7 +265,7 @@ body._lock {
   opacity: 1;
 }
 .menu__link {
-  color: #ffffff;
+  color: #000000;
   position: relative;
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
@@ -279,7 +279,7 @@ body._lock {
   width: 0%;
   height: 2px;
   top: calc(100% - 5px);
-  background: #6740d4;
+  background: #000000;
   -webkit-transition: width 0s ease 0.4s, -webkit-transform 0.2s ease 0.25s;
   transition: width 0s ease 0.4s, -webkit-transform 0.2s ease 0.25s;
   transition: transform 0.2s ease 0.25s, width 0s ease 0.4s;
@@ -292,7 +292,7 @@ body._lock {
 }
 @media (any-hover: hover) {
   .menu__link:hover {
-    color: #ffffff;
+    color: #000000;
   }
 }
 @media (min-width: 991.98px) {
@@ -311,7 +311,7 @@ body._lock {
     left: -20px;
     background: #f2f0f0;
     min-width: 150px;
-    border: 1px solid #000000;
+    border: 1px solid #f5f5f5;
     padding-top: 15px;
     -webkit-transform: translate3d(0px, 20px, 0px);
             transform: translate3d(0px, 20px, 0px);
@@ -370,7 +370,7 @@ body._lock {
   }
 }
 .burger__line {
-  background: #6740d4;
+  background: #000000;
   height: 2px;
   width: 100%;
   -webkit-transition: all 0.3s ease 0s;
