--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -157,7 +157,7 @@ body._lock {
   left: 0;
   padding: 18px 0;
   z-index: 100;
-  border-bottom: 1px solid #f5f5f5;
+  border-bottom: 1px solid #787878;
 }
 .header__container {
   display: -webkit-box;
@@ -183,7 +183,7 @@ body._lock {
 .header__logo {
   font-weight: 700;
   font-size: 30px;
-  color: #000000;
+  color: #4d4c4c;
   position: relative;
   z-index: 2;
 }
@@ -311,7 +311,7 @@ body._lock {
     left: -20px;
     background: #f2f0f0;
     min-width: 150px;
-    border: 1px solid #f5f5f5;
+    border: 1px solid #787878;
     padding-top: 15px;
     -webkit-transform: translate3d(0px, 20px, 0px);
             transform: translate3d(0px, 20px, 0px);
