--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -491,6 +491,10 @@ body._lock {
       -ms-flex: 0 0 auto;
           flex: 0 0 auto;
 }
+.menu-footer {
+    display: flex;
+    gap: 15px;
+}
 
 .menu-footer__list {
   display: -webkit-box;
