--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -492,8 +492,18 @@ body._lock {
           flex: 0 0 auto;
 }
 .menu-footer {
-    display: flex;
-    gap: 15px;
+     display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 15px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .menu-footer__list {
