--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -229,7 +229,6 @@ body._lock {
     left: -100%;
     height: 100%;
     background: #f2f0f0;
-    min-width: 300px;
     z-index: -1;
     overflow: auto;
     padding: 130px 15px 40px;
@@ -237,6 +236,11 @@ body._lock {
   .menu._active {
     left: 0;
   }
+}
+@media (min-width:767.98px) and (max-width: 991.98px){
+  .menu {
+    min-width: 300px;
+  }	
 }
 @media (max-width: 767.98px) {
   .menu {
