--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -256,6 +256,9 @@ body._lock {
     padding: 0;
   }
 }
+.menu__item {
+  position:relative;
+}
 .menu__item:hover .menu__submenu-list {
   -webkit-transform: translate3d(0px, 0px, 0px);
           transform: translate3d(0px, 0px, 0px);
