--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -178,7 +178,7 @@ body._lock {
   height: 100%;
   top: 0;
   left: 0;
-  background: #ffffff;
+  background: #468284;
 }
 .header__logo {
   font-weight: 700;
