--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -458,6 +458,139 @@ body._lock {
   max-width: 100%;
 }
 
+.rows-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 70px;
+}
+@media (max-width: 1012px) {
+  .rows-section {
+    gap: calc(30px + 40 * (100vw - 320px) / 692);
+  }
+}
+@media (max-width: 767.98px) {
+  .rows-section {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+}
+.rows-section.reverse {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+@media (max-width: 767.98px) {
+  .rows-section.reverse {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+}
+.rows-section__image {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 40%;
+          flex: 0 1 40%;
+}
+.rows-section__image img {
+  max-width: 100%;
+}
+.rows-section__info {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 60%;
+          flex: 0 1 60%;
+}
+.rows-section__title {
+  font-size: 22px;
+  color: #6740d4;
+}
+.rows-section__subtitle {
+  font-size: 18px;
+  color: #6740d4;
+  font-weight: 700;
+}
+.columns-section {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 70px;
+}
+@media (max-width: 1012px) {
+  .columns-section {
+    gap: calc(30px + 40 * (100vw - 320px) / 692);
+  }
+}
+.columns-section__column {
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.columns-section__icon {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: #6740d4;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100px;
+          flex: 0 0 100px;
+}
+.columns-section__icon:not(:last-child) {
+  margin-bottom: 30px;
+}
+.columns-section__icon img {
+  max-width: 50px;
+  max-height: 50px;
+}
+.columns-section__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.columns-section__title {
+  font-size: 18px;
+  color: #6740d4;
+  font-weight: 700;
+}
+.columns-section__title:not(:last-child) {
+  margin-bottom: 15px;
+}
+.columns-section__text {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
 .footer {
   font-size: 13px;
   color: #787878;
