--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -519,9 +519,6 @@ body._lock {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   gap: 70px;
 }
 @media (max-width: 1012px) {
@@ -576,6 +573,9 @@ body._lock {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
 }
 .columns-section__title {
   font-size: 18px;
